Fixed problem with overlapping header

--- a/LastApple.Web/ClientApp/src/index.css
+++ b/LastApple.Web/ClientApp/src/index.css
@@ -185,6 +185,7 @@ h1, h2, h3, h4, h5, h6 {
     top: 0;
     left: 0;
     right: 0;
+    z-index: 1000;
 }
 
 @media (max-width: 480px) {
